syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User {
    rpc GetUserList(PageInfo) returns (UserListResponse);   //用户列表
    rpc GetUserById(IDRequest) returns (UserInfoResponse);  // 通过ID查询用户
    rpc GetUserByEmail(EmailRequest) returns (UserInfoResponse);  // 通过邮箱查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);  // 添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);  // 更新用户信息
    rpc CheckPassword(PasswordCheckInfo) returns (CheckPasswordResponse);   // 检查用户密码
}

message PageInfo {
    uint32 pageNum = 1;
    uint32 pageSize = 2;
}

message IDRequest {
    uint64 id = 1;
}

message EmailRequest {
    string email = 1;
}

message UpdateUserInfo {
    uint64 id = 1;
    string username = 2;
    uint32 gender = 3;
}

message CreateUserInfo {
    string username = 1;
    string password = 2;
    string rePassword = 3;
    string email = 4;
}

message PasswordCheckInfo {
    string password = 1;
    string encryptedPassword = 2;
}

message UserInfoResponse {
    uint64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    bool emailVerified = 5;
    string avatar = 6;
    string backgroundImage = 7;
    string description = 8;
    uint64 score = 9;
    int32 status = 10;
    uint64 articleCount = 11;
    uint64 commentCount = 12;
    sint32 roles = 13;
    sint32 type = 14;
    uint32 gender = 15;
    uint64 forbiddenEndTime = 16;
    uint64 createTime = 17;
    uint64 updateTime = 18;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}

message CheckPasswordResponse {
    bool success = 1;
}